// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <h3>
     Viewing 
    1
     
    expense
     totalling 
    $1.23
  </h3>
</div>
`;

exports[`should correctly render ExpenseSummary with multiple expenses 1`] = `
<div>
  <h3>
     Viewing 
    22
     
    expenses
     totalling 
    $1,234.56
  </h3>
</div>
`;
